--- a/src/less/login.less
+++ b/src/less/login.less
@@ -63,6 +63,12 @@
         }
         &.reg-p {
             border-bottom: 1px solid #d7d7d7;
+            .fa-map-marker {
+                position: absolute;
+                right: 0;
+                top: 1px;
+                padding: 5px 20px;
+            }
         }
     }
 
