--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,7 +1,7 @@
 <div class="area-title">
     <div ng-click="pageBack()" class="area-title-back">
     </div>
-    账户登录
+    账户绑定
 </div>
 
 <div class="scrollable">
@@ -20,7 +20,7 @@
 
       <div class="login-control">
         <a class="fast-reg" href="#/reg">快速注册</a>
-        <a class="find-pwd" href="">找回密码</a>
+        <a ng-hide="true" class="find-pwd" href="">找回密码</a>
       </div>
   </div>
 </div>
