--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -9,7 +9,7 @@
         <div ng-click="go('/orders')" class="detail-item detail-item-comment">
             我的订单<i class="fa fa-angle-right"></i>
         </div>
-        <div ng-click="go('/member_info')" class="detail-item detail-item-comment">
+        <div ng-click="go('/member_info')" class="detail-item detail-item-tel">
             会员信息<i class="fa fa-angle-right"></i>
         </div>
 
@@ -24,7 +24,7 @@
                 我的收藏<i class="fa fa-angle-right"></i>
             </div>
         </div>
-        <div class="detail-item detail-item-tel">
+        <div class="detail-item detail-item-comment">
             客服电话<i class="fa fa-angle-right"></i>
         </div>
         <div ng-hide="true" class="detail-shop-wrap">
