--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -52,7 +52,7 @@
       <li><a>购物指南</a></li>
       <li><a>客服电话</a></li>
       <li><a href="#/your_coffee">你的咖啡</a></li>
-      <li><a href="#/reg">注册</a></li>
+      <li><a href="#/login">绑定</a></li>
     </ul>
   </div>
 </div>
