--- a/src/templates/add_receiver.html
+++ b/src/templates/add_receiver.html
@@ -16,8 +16,8 @@
           <label>手机号码</label><input type="tel" ng-model="vm.addPhone" placeholder="11位手机号码"/>
         </p>
         <p class="reg-p">
-          <label>地区信息</label><input type="text" ng-model="vm.addRegion" placeholder="地区信息"/>
-          <i ng-click="vm.selectRegion()" class="fa fa-map-marker fa-2x"></i>
+          <label>地区信息</label><input disabled="disabled" type="text" ng-model="vm.addRegion" placeholder="地区信息"/>
+          <i ui-turn-on="region_selector" class="fa fa-map-marker fa-2x"></i>
         </p>
         <p class="reg-p">
           <label>详细地址</label><input type="text" ng-model="vm.addAddress" placeholder="街道门牌信息"/>
@@ -28,4 +28,8 @@
       </div>
 
   </div>
+</div>
+
+<div ui-content-for="modals">
+  <div ng-include="'region_selector.html'"></div>
 </div>
