--- a/src/less/collections.less
+++ b/src/less/collections.less
@@ -1,6 +1,7 @@
 .collection-content {
     background: #f8f8f8;
     padding-top: 40px;
+    padding-bottom: 40px;
     .collection-item {
         margin-top: 10px;
         background: #fff;
