--- a/src/less/login.less
+++ b/src/less/login.less
@@ -68,6 +68,8 @@
                 right: 0;
                 top: 1px;
                 padding: 5px 20px;
+                width: 100%;
+                text-align: right;
             }
         }
     }
