--- a/src/templates/pay_order.html
+++ b/src/templates/pay_order.html
@@ -10,7 +10,7 @@
             添加收货人<i class="fa fa-angle-right"></i>
         </div>
 
-        <div ng-init="vm.initList()" class="tab-cont">
+        <div ng-init="vm.initList(true)" class="tab-cont">
             <div ng-repeat="p in vm.products" class="edit-cart-item">
                 <div class="product-title">订单时间：{{p.product.createDate | humanDate}}</div>
                 <div class="product-desc-wrap">
