--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -24,7 +24,7 @@
                 我的收藏<i class="fa fa-angle-right"></i>
             </div>
         </div>
-        <div class="detail-item detail-item-comment">
+        <div ng-hide="true" class="detail-item detail-item-comment">
             客服电话<i class="fa fa-angle-right"></i>
         </div>
         <div ng-hide="true" class="detail-shop-wrap">
