--- a/src/less/orders.less
+++ b/src/less/orders.less
@@ -74,10 +74,15 @@
     }
 }
 
+.order-detail-title {
+    border-bottom: 1px solid #ddd;
+    .box-shadow(0 1px 3px #eee);
+}
+
 /* 订单详情 */
 .order-detail-content {
     padding: 40px 0;
-    background: #f8f8f8;
+    background: #fff;
     p {
         padding: 5px 0 0;
         margin: 0;
