--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -24,6 +24,10 @@
                     font-size: 14px;
                     color: #f00;
                 }
+                .product-title-type {
+                    float: right;
+                    font-size: 14px;
+                }
             }
             .product-desc-wrap {
                 .display-flex();
