--- a/src/templates/member_ship.html
+++ b/src/templates/member_ship.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="detail-item-group">
-            <div class="detail-item detail-item-record">
+            <div ng-click="go('/order_records')" class="detail-item detail-item-record">
                 我的购物记录<i class="fa fa-angle-right"></i>
             </div>
             <div class="detail-item detail-item-points">
