--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -118,9 +118,11 @@
         font-weight: bold;
     }
     .btn {
+        overflow: hidden;
         float: right;
         margin: 0 5px;
         line-height: 16px;
+        min-width: 70px;
     }
     z-index: 100;
 }
