--- a/src/less/select_receiver.less
+++ b/src/less/select_receiver.less
@@ -7,6 +7,11 @@
     }
 }
 
+.select-receiver-content-no {
+    padding: 10px;
+    text-align: center;
+}
+
 /* add_receiver */
 .add-receiver-btn {
     position: absolute;
