--- a/src/less/pay_order.less
+++ b/src/less/pay_order.less
@@ -6,6 +6,7 @@
         padding: 10px;
         background: #fff;
         margin-bottom: 5px;
+        border-bottom: 1px solid #ccc;
         h4 {
             font-size: 15px;
             span {
