--- a/src/templates/select_receiver.html
+++ b/src/templates/select_receiver.html
@@ -7,7 +7,7 @@
 </div>
 <div class="scrollable">
     <div ng-init="vm.getList()" class="scrollable-content select-receiver-content" scroll>
-        <div class="receiver-item" ng-repeat="a in vm.items track by $index">
+        <div ng-click="vm.select(a)" class="receiver-item" ng-repeat="a in vm.items track by $index">
             <h4>{{a.consignee}} <span>{{a.phone}}</span></h4>
             <p>{{a.areaName}} {{a.address}}</p>
         </div>
