--- a/src/less/collections.less
+++ b/src/less/collections.less
@@ -36,6 +36,12 @@
                 bottom: 5px;
                 color: #666;
             }
+            .collection-del {
+                position: absolute;
+                right: 90px;
+                bottom: 5px;
+                color: #f00;
+            }
         }
     }
 }
