--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -79,6 +79,10 @@
                 }
             }
         }
+        .edit-cart-item-none {
+            padding: 20px;
+            text-align: center;
+        }
     }
 }
 
