--- a/src/less/main.less
+++ b/src/less/main.less
@@ -142,6 +142,7 @@
             height: 55px;
             width: 100%;
             bottom: 0;
+            padding: 10px 15px;
         }
     }
 }
