--- a/src/templates/edit_shopping_cart.html
+++ b/src/templates/edit_shopping_cart.html
@@ -34,6 +34,9 @@
                    <div class="product-price">￥{{p.price}}<span>x{{p.quantity}}</span></div>
                 </div> 
             </div>
+            <div class="edit-cart-item-none">
+                暂无购物记录~
+            </div>
         </div>
 
     </div>
