--- a/src/less/login.less
+++ b/src/less/login.less
@@ -35,7 +35,7 @@
 
     p {
         height: 45px;
-        padding: 8px 5px 8px 80px;
+        padding: 0 5px 0 80px;
         color: #666;
         margin: 0;
         position: relative;
