--- a/src/templates/order_records.html
+++ b/src/templates/order_records.html
@@ -5,7 +5,7 @@
     我的购物记录
 </div>
 <div class="scrollable">
-    <div ng-init="vm.historyOrders()" class="scrollable-content edit-cart-content" scroll>
+    <div ng-init="vm.getOrderHistory()" class="scrollable-content edit-cart-content" scroll>
         <div ng-repeat="p in vm.historyOrders" class="edit-cart-item">
             <div class="product-title">时间：{{p.createDate | humanDate}}<span class="product-title-type">已完成</span></div>
             <div class="product-desc-wrap">
