--- a/src/less/orders.less
+++ b/src/less/orders.less
@@ -100,7 +100,7 @@
             position: relative;
             padding-bottom: 10px;
             border-bottom: 1px solid #888;
-            padding: 0 0 10px 100px;
+            padding-bottom: 10px;
             min-height: 90px;
             img {
                 position: absolute;
