--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -28,6 +28,9 @@
                 font-size: 14px;
             }
         }
+        .product-desc-history {
+            padding-left: 0;
+        }
         .product-desc-wrap {
             .display-flex();
             .clear-float();
@@ -65,6 +68,9 @@
                     display: block;
                     padding-top: 5px;
                 }
+            }
+            .product-desc-history {
+                padding-left: 0;
             }
             .product-price {
                 width: 60px;
