--- a/src/templates/edit_shopping_cart.html
+++ b/src/templates/edit_shopping_cart.html
@@ -25,16 +25,15 @@
 
         <div ng-init="vm.getHistory()" class="tab-cont" ui-if="activeTab == 2">
             <div ng-repeat="p in vm.historyOrders" class="edit-cart-item">
-                <div class="product-title">时间：{{p.product.createDate | humanDate}}</div>
+                <div class="product-title">时间：{{p.createDate | humanDate}}</div>
                 <div class="product-desc-wrap">
-                    <div class="product-desc">
-                        <img ng-src="{{p.product.image}}" alt="" />
-                        {{p.product.fullName}}
+                    <div class="product-desc product-desc-history">
+                        {{p.name}}
                     </div>
                    <div class="product-price">￥{{p.price}}<span>x{{p.quantity}}</span></div>
                 </div> 
             </div>
-            <div class="edit-cart-item-none">
+            <div ng-show="vm.historyOrders.length <= 0" class="edit-cart-item-none">
                 暂无购物记录~
             </div>
         </div>
