--- a/src/templates/order_detail.html
+++ b/src/templates/order_detail.html
@@ -14,8 +14,8 @@
             <div class="order-detail">
                 <p>下单时间：{{vm.order.createDate | humanDate}}</p>
                 <p>订单编号：{{vm.order.sn}}</p>
-                <p>订单金额：<em>￥{{vm.order.price}}</em>({{vm.order.quantity})</p>
-                <p>状态：{{vm.order.sn}</p>
+                <p>订单金额：<em>￥{{vm.order.price}}</em>({{vm.order.quantity}})</p>
+                <p>状态：{{vm.order.sn}}</p>
                 <a ng-click="vm.payOrder()" ng-show="'unpaid' == vm.order.paymentStatus" href="javascript:;">微信支付</a>
             </div>
         </div>
