--- a/src/templates/order_records.html
+++ b/src/templates/order_records.html
@@ -9,8 +9,7 @@
         <div ng-repeat="p in vm.historyOrders" class="edit-cart-item">
             <div class="product-title">时间：{{p.createDate | humanDate}}<span class="product-title-type">已完成</span></div>
             <div class="product-desc-wrap">
-                <div class="product-desc">
-                    <img ng-src="{{p.image}}" alt="" />
+                <div class="product-desc product-desc-history">
                     {{p.name}}
                     <!-- <span>{{p.select_weight}}</span> -->
                 </div>
