--- a/src/templates/order_detail.html
+++ b/src/templates/order_detail.html
@@ -15,16 +15,16 @@
                 <p>下单时间：{{vm.order.createDate | humanDate}}</p>
                 <p>订单编号：{{vm.order.sn}}</p>
                 <p>订单金额：<em>￥{{vm.order.price}}</em>({{vm.order.quantity}})</p>
-                <p>状态：{{vm.order.sn}}</p>
+                <p>状态：{{vm.orderStatusText}}</p>
                 <a ng-click="vm.payOrder()" ng-show="'unpaid' == vm.order.paymentStatus" href="javascript:;">微信支付</a>
             </div>
         </div>
         <div class="sent-address">
             <h4>收货信息</h4>
-            <p>收货人：{{vm.order.shippings.consignee}} {{vm.order.shippings.phone}}</p>
-            <p>收货地址：{{vm.order.shippings.area}} {{vm.order.shippings.address}}</p>
-            <p>运送方式：{{vm.order.shippings.shippingMethod}}</p>
-            <p>物流信息：{{vm.order.shippings.deliveryCorp}} 单号{{vm.order.shippings.trackingNo}}</p>
+            <p>收货人：{{vm.order.consignee}} {{vm.order.phone}}</p>
+            <p>收货地址：{{vm.order.areaName}} {{vm.order.address}}</p>
+            <p>运送方式：{{vm.order.shippingMethodName}}</p>
+            <p ng-show="vm.order.trackingNo">物流单号：{{vm.order.trackingNo}}</p>
         </div>
     </div>
 </div>
