--- a/src/templates/order_detail.html
+++ b/src/templates/order_detail.html
@@ -23,8 +23,8 @@
             <h4>收货信息</h4>
             <p>收货人：{{vm.order.consignee}} {{vm.order.phone}}</p>
             <p>收货地址：{{vm.order.areaName}} {{vm.order.address}}</p>
-            <p>运送方式：{{vm.order.shippingMethodName}}</p>
-            <p ng-show="vm.order.trackingNo">物流单号：{{vm.order.trackingNo}}</p>
+            <p>运送方式：{{vm.order.shippingMethodName}} {{vm.shippingsDeliveryCorp}}</p>
+            <p ng-show="vm.shippingsTrackingNo">物流单号：{{vm.shippingsTrackingNo}}</p>
         </div>
     </div>
 </div>
