--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,5 +1,5 @@
 .login-cont {
-    padding-top: 52px;
+    height: 100%;
     background-color: #eee;
     .submit-login-btn {
       display: block;
