--- a/src/templates/add_receiver.html
+++ b/src/templates/add_receiver.html
@@ -5,29 +5,27 @@
     <a class="add-receiver-btn" ng-click="vm.addReceiver()" href="javascript:void(0);">完成</a>
 </div>
 
-<div class="scrollable">
-  <div ng-init="" class="scrollable-content login-cont" scroll>
+<div class="login-cont">
 
-      <div class="login-input-wrap marginTop10">
-        <p class="reg-p">
-          <label>收货人</label><input type="text" ng-model="vm.addName" placeholder="姓名"/>
-        </p>
-        <p class="reg-p">
-          <label>手机号码</label><input type="tel" ng-model="vm.addPhone" placeholder="11位手机号码"/>
-        </p>
-        <p class="reg-p">
-          <label>地区信息</label><input type="text" ng-model="vm.addRegion" placeholder="地区信息"/>
-          <i ui-turn-on="region_selector" class="fa fa-map-marker fa-2x"></i>
-        </p>
-        <p class="reg-p">
-          <label>详细地址</label><input type="text" ng-model="vm.addAddress" placeholder="街道门牌信息"/>
-        </p>
-        <p>
-          <label>邮政编码</label><input type="tel" ng-model="vm.addPostCode" placeholder="邮政编码"/>
-        </p>
-      </div>
+    <div class="login-input-wrap marginTop10">
+      <p class="reg-p">
+        <label>收货人</label><input type="text" ng-model="vm.addName" placeholder="姓名"/>
+      </p>
+      <p class="reg-p">
+        <label>手机号码</label><input type="tel" ng-model="vm.addPhone" placeholder="11位手机号码"/>
+      </p>
+      <p class="reg-p">
+        <label>地区信息</label><input type="text" ng-model="vm.addRegion" placeholder="地区信息"/>
+        <i ui-turn-on="region_selector" class="fa fa-map-marker fa-2x"></i>
+      </p>
+      <p class="reg-p">
+        <label>详细地址</label><input type="text" ng-model="vm.addAddress" placeholder="街道门牌信息"/>
+      </p>
+      <p>
+        <label>邮政编码</label><input type="tel" ng-model="vm.addPostCode" placeholder="邮政编码"/>
+      </p>
+    </div>
 
-  </div>
 </div>
 
 <div ui-content-for="modals">
