--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,23 +4,20 @@
     账户绑定
 </div>
 
-<div class="scrollable">
-  <div ng-init="" class="scrollable-content login-cont" scroll>
+<div class="login-cont">
+    <div class="login-input-wrap marginTop10">
+      <p>
+        <label>账户</label><input type="text" ng-model="vm.Account.logTel" placeholder="手机/会员/邮箱"/>
+      </p>
+      <p>
+        <label>登录密码</label><input type="password" ng-model="vm.Account.logPwd" placeholder="请输入密码"/>
+      </p>
+    </div>
 
-      <div class="login-input-wrap marginTop10">
-        <p>
-          <label>账户</label><input type="text" ng-model="vm.Account.logTel" placeholder="手机/会员/邮箱"/>
-        </p>
-        <p>
-          <label>登录密码</label><input type="password" ng-model="vm.Account.logPwd" placeholder="请输入密码"/>
-        </p>
-      </div>
+    <span ng-click="vm.Account.send()" class="submit-login-btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</span>
 
-      <span ng-click="vm.Account.send()" class="submit-login-btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</span>
-
-      <div class="login-control">
-        <a class="fast-reg" href="#/reg">快速注册</a>
-        <a ng-hide="true" class="find-pwd" href="">找回密码</a>
-      </div>
-  </div>
+    <div class="login-control">
+      <a class="fast-reg" href="#/reg">快速注册</a>
+      <a ng-hide="true" class="find-pwd" href="">找回密码</a>
+    </div>
 </div>
