--- a/src/less/login.less
+++ b/src/less/login.less
@@ -1,6 +1,7 @@
 .login-cont {
     height: 100%;
     background-color: #eee;
+    padding-top: 12px;
     .submit-login-btn {
       display: block;
       height: 45px;
