--- a/src/templates/add_shopping_cart.html
+++ b/src/templates/add_shopping_cart.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 </div>
-<div class="detail-buy-buttons navbar-absolute-bottom">
+<div class="detail-buy-buttons navbar-absolute-bottom detail-buy-buttons-wide">
     <div ng-show="!vm.isAddCart" ng-click="vm.buyIt()" class="btn btn-danger">
         下一步
     </div>
