--- a/src/templates/edit_shopping_cart.html
+++ b/src/templates/edit_shopping_cart.html
@@ -40,7 +40,7 @@
 
     </div>
 </div>
-<div class="edit-shopping-cart-buy-buttons navbar-absolute-bottom">
+<div class="edit-shopping-cart-buy-buttons navbar-absolute-bottom" ui-if="activeTab == 1">
     <div class="total-price">合计：{{vm.totalPrice}}元</div>
     <div ng-click="go('/pay_order')" class="btn btn-danger">
         结算({{vm.products.length || 0}})
