--- a/src/less/area.less
+++ b/src/less/area.less
@@ -42,17 +42,18 @@
 
 .area-content {
     background: #f0efed;
-    padding: 50px 0 10px 15px;
+    padding: 50px 0 20px 0;
+    width: 100%;
     .area-item {
-        float: left;
         background-color: #fafafa;
-        .border-radius(2px);
-        margin: 0 14px 12px 0;
-        width: 85px;
+        width: 100%;
         height: 40px;
         line-height: 40px;
-        text-align: center;
-        border: 1px solid #d8d3d0;
-        .box-shadow(1px 1px 2px #ddd);
+        text-align: left;
+        padding-left: 10px;
+        border-bottom: 1px solid #d8d3d0;
+        &:last-child {
+            border-top: 1px solid #d8d3d0;
+        }
     }
 }
