--- a/src/less/main.less
+++ b/src/less/main.less
@@ -146,3 +146,30 @@
         }
     }
 }
+
+.ajax-data-loading {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 10000;
+    span {
+        width: 100px;
+        height: 50px;
+        line-height: 50px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        .border-radius(5px);
+        background: rgba(0 ,0 ,0 ,0.7);
+        color: #fff;
+        margin: auto;
+        text-align: center;
+        font-family: 'Microsoft Yahei';
+        .box-shadow(0 0 3px #000 inset);
+    }
+}
