--- a/src/less/orders.less
+++ b/src/less/orders.less
@@ -122,7 +122,7 @@
                 position: absolute;
                 right: 10px;
                 bottom: 0;
-                color: #333;
+                color: #f00;
             }
         }
     }
