--- a/src/less/add_shopping_cart.less
+++ b/src/less/add_shopping_cart.less
@@ -84,6 +84,15 @@
                 float: right;
             }
         }
+        .baking-price-item {
+            padding: 5px 0;
+            .clear-float();
+            span {
+                float: right;
+                font-size: 15px;
+                color: #f00;
+            }
+        }
     }
 }
 
