--- a/src/less/orders.less
+++ b/src/less/orders.less
@@ -63,7 +63,9 @@
                         color: #e37333;
                         .border-radius(10px);
                         text-align: center;
+                        margin-left: 10px;
                     }
+
                 }
             }
         }
