--- a/src/less/group_purchase.less
+++ b/src/less/group_purchase.less
@@ -146,4 +146,8 @@ ul.group-purchase-title {
             }
         }
     }
+    .tab-cont-none {
+        padding: 20px 0;
+        text-align: center;
+    }
 }
