--- a/src/less/select_receiver.less
+++ b/src/less/select_receiver.less
@@ -1,6 +1,7 @@
 .select-receiver-content {
     background: #f8f8f8;
     padding-top: 40px;
+    padding-bottom: 60px;
     .receiver-item {
         margin-top: 10px;
         background: #fff;
