--- a/src/templates/bottom_nav.html
+++ b/src/templates/bottom_nav.html
@@ -32,7 +32,7 @@
       ui-state="dropdown2"
       ui-turn-off="dropdown2">
       <li><a href="#/group_purchase">限时抢购</a></li>
-      <li><a>活动预告</a></li>
+      <!-- <li><a>活动预告</a></li> -->
     </ul>
   </div>
   <div class="btn btn-navbar">
@@ -49,7 +49,7 @@
       ui-state="dropdown3"
       ui-turn-off="dropdown3">
       <li><a href="#/member_ship">个人主页</a></li>
-      <li><a>购物指南</a></li>
+      <li><a href="http://www.urcoffee.com/article/list/3.jhtml">购物指南</a></li>
       <li><a ng-click="customerService();Ui.turnOff('dropdown3');">客服电话</a></li>
       <li><a href="#/your_coffee">你的咖啡</a></li>
       <li><a href="#/login">绑定</a></li>
