--- a/src/templates/group_purchase.html
+++ b/src/templates/group_purchase.html
@@ -1,32 +1,35 @@
-<ul class="group-purchase-title nav nav-tabs" ui-state='activeTab' ui-default='1'>
-  <li ng-repeat="t in vm.groupPurchaseDates" ng-class="{'active': vm.activeTab == t.index}">
-    <a ng-click="vm.activeTab = t.index" ui-set="{'activeTab': t.index}">{{t.date}}<span>{{t.desc}}</span></a>
+<ul ng-show="vm.groupPurchaseDates.length > 0" class="group-purchase-title nav nav-tabs">
+  <li ng-repeat="t in vm.groupPurchaseDates" ng-class="{'active': vm.curTime == t}">
+    <a ng-click="vm.getGroupProducts(t)">{{t}}<span>{{t | groupTime}}</span></a>
   </li>
 </ul>
 <div class="scrollable">
     <div class="scrollable-content group-purchase-content" scroll>
 
-        <div class="tab-cont" ui-if="activeTab == 1">
-            <div class="group-purchase-tip">
+        <div class="tab-cont">
+<!--             <div class="group-purchase-tip">
               限时限量 疯狂抢购
               <span>距离本场结束 00:21:14</span>
-            </div>
-            <div class="purchase-item">
+            </div> -->
+            <div ng-repeat="p in vm.groupProducts" class="purchase-item">
                 <img ng-src="images/p1.jpg" alt="" />
                 <div class="item-desc">
-                    <h3>精品意大利咖啡豆 新鲜中深度烘培 香醇浓厚</h3>
-                    <div class="item-price"><span>￥39.9</span><del>￥118</del></div>
-                    <span class="item-select">马上抢</span>
+                    <h3>{{p.name}}</h3>
+                    <div class="item-price"><span>￥{{p.price}}</span><del ng-hide="true">￥</del></div>
+                    <span ng-show="vm.isPreDate" ng-click="vm.buyIt({{p}})" class="item-select">马上抢</span>
                 </div>
                 <div class="item-last">
-                    <span class="item-percent">已抢购35%</span>
-                    <span class="item-percent-tip"><em style="width:10%"></em></span>
-                    <span class="item-get">已抡4427件</span>
+                    <span class="item-percent">已抢购{{p.saleEd / p.maxSale * 100 | ceilNum}}%</span>
+                    <span class="item-percent-tip"><em style="width:{{p.saleEd / p.maxSale * 100 | ceilNum}}%"></em></span>
+                    <span class="item-get">已抢{{p.saleEd}}件</span>
                 </div>
             </div>
         </div>
+        <div ng-show="vm.groupProducts.length == 0" class="tab-cont-none">
+            暂无团购信息~
+        </div>
 
-        <div class="tab-cont" ui-if="activeTab == 2">
+        <!-- <div class="tab-cont" ui-if="activeTab == 2">
             <div class="group-purchase-tip">
               提前设置提醒不错过
               <span>距离本场开始 00:21:14</span>
@@ -73,7 +76,7 @@
                     <span class="item-attention">1.3万人已关注</span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
