--- a/src/less/main.less
+++ b/src/less/main.less
@@ -173,3 +173,23 @@
         .box-shadow(0 0 3px #000 inset);
     }
 }
+
+.list-group-next {
+  text-align: center;
+  padding: 10px 0;
+  font-size: 14px;
+  clear: both;
+}
+
+.list-group-next i {
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+  margin-right: 3px;
+  -webkit-animation: fa-spin 0.7s infinite linear;
+  animation: fa-spin 0.7s infinite linear;
+}
+
+.list-group-next i:before {
+  content: "\f110";
+}
