--- a/src/templates/select_receiver.html
+++ b/src/templates/select_receiver.html
@@ -11,6 +11,6 @@
             <h4>{{a.consignee}} <span>{{a.phone}}</span></h4>
             <p>{{a.areaName}} {{a.address}}</p>
         </div>
+        <div class="select-receiver-content-no" ng-show="vm.items.length <= 0">没有收获地址，点击新增添加。</div>
     </div>
-    <div class="select-receiver-content-no"> ng-show="vm.items.length <= 0">没有收获地址，点击新增添加。</div>
 </div>
