--- a/src/less/edit_shopping_cart.less
+++ b/src/less/edit_shopping_cart.less
@@ -10,6 +10,7 @@
     padding-bottom: 50px;
     .edit-cart-item {
         margin-top: 10px;
+        min-height: 100px;
         padding: 10px;
         background: #fff;
         border-top: 1px solid #e5e5e5;
@@ -57,6 +58,7 @@
                 position: relative;
                 padding-left: 60px;
                 color: #666;
+                height: 50px;
                 img {
                     position: absolute;
                     width: 50px;
@@ -73,14 +75,19 @@
                 padding-left: 0;
             }
             .product-price {
-                width: 60px;
                 text-align: right;
                 font-size: 16px;
                 color: #666;
                 span {
-                    display: block;
                     font-size: 14px;
+                    padding-left: 10px;
                 }
+            }
+            .product-processing {
+                color: #f00;
+                text-align: right;
+                font-size: 14px;
+                padding-top: 10px;
             }
         }
     }
